# fsx-rs

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
doc/: fsx.1  fsx.toml
src/: main.rs  prng.rs
tests/: integration.rs
