[package]
name = "fsx"
version = "0.1.1"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "APSL-2.0"
repository = "https://github.com/asomers/fsx-rs"
description = "File System eXerciser"
categories = ["filesystem", "development-tools::testing"]
rust-version = "1.63"
keywords = ["filesystem", "test"]

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
env_logger = "0.10.0"
libc = "0.2.139"
log = "0.4.17"
nix = { version = "0.26.0", default-features = false, features = [ "feature", "mman" ]}
rand = { version = "0.8.5" }
ringbuffer = "0.11.0"
safemem = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.3"
rstest = "0.11.0"
tempfile = "3.0"
