[package]
name = "fsx"
version = "0.2.0"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "APSL-2.0"
repository = "https://github.com/asomers/fsx-rs"
description = "File System eXerciser"
categories = ["filesystem", "development-tools::testing"]
rust-version = "1.63"
keywords = ["filesystem", "test"]

[dependencies]
